[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milo"
version = "1.0.3"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A tool for molecular dynamics simulations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
